Fix tabs alignment on Pip-Boy 3000 Mk IV Simulator with new global font.Update README logo.

--- a/src/app/layout/pip-boy-3000-mk-iv/tabs/tab.component.scss
+++ b/src/app/layout/pip-boy-3000-mk-iv/tabs/tab.component.scss
@@ -5,6 +5,7 @@
 nav.tab-header {
   display: flex;
   justify-content: space-evenly;
+  margin-top: 0.75rem;
   position: relative;
   width: 100%;
 }
